2014-02-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/multiboot_mbi.c (grub_multiboot_make_mbi): Limit
	location to 640K.

2014-02-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/coreboot/mmap.c: Filter out 0xa0000-0x100000
	region.

2014-02-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ahci.c: Ignore NPORTS field and rely on PI
	exclusively.

2014-02-04  Paulo Flabiano Smorigo  <pfsmorigo@br.ibm.com>

	Add bootpath parser for open firmware.

	It enables net boot even when there is no bootp/dhcp server.

	* grub-core/net/drivers/ieee1275/ofnet.c: Add grub_ieee1275_parse_bootpath
	and call it at grub_ieee1275_net_config_real.
	* grub-core/kern/ieee1275/init.c: Add bootpath to
	grub_ieee1275_net_config.
	* include/grub/ieee1275/ieee1275.h: Likewise.


2014-02-04  Paulo Flabiano Smorigo  <pfsmorigo@br.ibm.com>

	Add grub_env_set_net_property function.

	* grub-core/net/bootp.c: Remove set_env_limn_ro.
	* grub-core/net/net.c: Add grub_env_set_net_property.
	* include/grub/net.h: Likewise.

2014-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.c: Build fix for argp.h with older gcc.

2014-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkfont.c: Build fix for argp.h with older gcc.

2014-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ahci.c: Increase timeout. Some SSDs take up to
	7 seconds to recover if last poweroff was bad.

2014-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ahci.c: Properly handle transactions with no
	transferred data.

2014-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ahci.c: Add safety cleanups.

2014-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ahci.c: Allocate and clean space for all possible 32
	slots to avoid pointing to uninited area.

2014-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ahci.c: Do not enable I/O decoding and keep